[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI/Pattern.gd" type="Script" id=1]

[node name="Pattern" type="Control"]
rect_min_size = Vector2( 256, 0 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="mouse_pos" type="Label" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="array_pos" type="Label" parent="."]
visible = false
margin_left = 100.0
margin_right = 140.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="liste_notes" type="Node" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
